    * Fix bug #105787: Mark "Selected Files" as default in the       extraction dialog if more than one file is selected.

BUG: 105787


svn path=/trunk/KDE/kdeutils/ark/; revision=416609