extractdlg.cpp
@@ -185,6 +185,22 @@ ExtractDlg::~ExtractDlg()
 }
 
 void
+ExtractDlg::setDefaultExtractOp( ExtractOp op )
+{
+	switch ( op )
+	{
+		case Current:
+			m_radioCurrent->setChecked(  true );
+			break;
+		case Selected:
+			m_radioSelected->setChecked( true );
+			break;
+		default:
+			m_radioAll->setChecked( true );
+	}
+}
+
+void
 ExtractDlg::extractDirChanged(const QString &text )
 {
 	enableButtonOK(!text.isEmpty());
